# 163musicdl-APP

./: .gitignore  README.md  index.html  package-lock.json  package.json  scratch_test_api.ts  scratch_test_encrypt.ts  server.ts  test_outer.ts  tsconfig.json
.github/workflows/: publish.yml
app/applet/: test-lyric.ts
other/netease-downloader-main/netease-downloader-main/: README.md  README_en.md  cookie.txt  main.py  main_window.py  qr_login_dialog.py  requirements.txt  style.py  workers.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: SettingsModal.tsx
