[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.19"
id3 = "1.13"
rfd = "0.14"
regex = "1.10"
urlencoding = "2.1"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
md5 = "0.7"
